[gd_scene load_steps=18 format=3 uid="uid://s3ffjroj52u1"]

[ext_resource type="Theme" uid="uid://weaopiyujqgb" path="res://Shared/PixelTheme/pixel_theme.tres" id="1_oqvhd"]
[ext_resource type="Script" path="res://GUI/PlanetSelection.gd" id="2_e2ml8"]
[ext_resource type="Texture2D" uid="uid://c7ba3qwxm52ut" path="res://Shared/background2.png" id="3_y0536"]
[ext_resource type="Texture2D" uid="uid://3wb7sfpx8dc5" path="res://Shared/planet.png" id="4_1auqq"]
[ext_resource type="Shader" path="res://Shader/recolor_shader.gdshader" id="4_6krtm"]
[ext_resource type="Texture2D" uid="uid://0rlw68sd0us5" path="res://Shared/06_Hologram_Theme/Sprites/UI_Hologram_Arrow_Large_01a.png" id="5_t0whs"]
[ext_resource type="Shader" path="res://VFX/monitor_effect.gdshader" id="6_ceiim"]
[ext_resource type="Texture2D" uid="uid://cqymriijmqg4f" path="res://Shared/06_Hologram_Theme/Sprites/UI_Hologram_Arrow_Large_01a_pressed.png" id="7_652oi"]
[ext_resource type="AudioStream" uid="uid://j8f1wb08iirs" path="res://Shared/Music/Juhani Junkala [Retro Game Music Pack] Title Screen.wav" id="7_s2l0i"]
[ext_resource type="Texture2D" uid="uid://b3kk5c2bhpjib" path="res://Shared/06_Hologram_Theme/Sprites/UI_Hologram_Arrow_Large_01a_hover.png" id="8_cemj6"]

[sub_resource type="Gradient" id="Gradient_6iyji"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lhmgx"]
gradient = SubResource("Gradient_6iyji")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_samg2"]
shader = ExtResource("4_6krtm")
shader_parameter/palette = SubResource("GradientTexture1D_lhmgx")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6gm6i"]
shader = ExtResource("6_ceiim")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.1
shader_parameter/scanlines_width = 0.1
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 5.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 0.1
shader_parameter/distort_intensity = 0.01
shader_parameter/noise_opacity = 0.1
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.01
shader_parameter/brightness = 1.1
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.1
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.0

[sub_resource type="Animation" id="Animation_1muod"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlanetTexture:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlanetTexture:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlanetTexture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_peegg"]
resource_name = "move_planet"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlanetTexture:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(353.5, -0.25, 0, 0, -7, 70, -0.4, -167.5, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlanetTexture:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(25.5, -0.25, 0, 0.25, 0, 0, -0.1, 18.5, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlanetTexture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(5.46416, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5dyel"]
_data = {
"RESET": SubResource("Animation_1muod"),
"move_planet": SubResource("Animation_peegg")
}

[node name="PlanetSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oqvhd")
script = ExtResource("2_e2ml8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_y0536")

[node name="PlanetTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_samg2")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_1auqq")

[node name="PlanetName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_top = 10.0
offset_right = 34.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.105469, 0.820313, 0.9375, 1)
theme_override_colors/font_shadow_color = Color(0.457031, 0.605469, 0.925781, 1)
theme_override_colors/font_outline_color = Color(0.1875, 0.28125, 0.46875, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 25
text = "Uranor"

[node name="ResourceLable" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -50.0
offset_right = 84.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.144531, 0.925781, 0.996094, 1)
theme_override_colors/font_outline_color = Color(0.0976563, 0.273438, 0.570313, 1)
theme_override_constants/outline_size = 12
theme_override_constants/line_spacing = -6
theme_override_font_sizes/font_size = 8
text = "AVAILABLE RESOURCES:"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="ResourceValueLable" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -35.0
offset_right = 84.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.144531, 0.925781, 0.996094, 1)
theme_override_colors/font_outline_color = Color(0.0976563, 0.273438, 0.570313, 1)
theme_override_constants/outline_size = 12
theme_override_constants/line_spacing = -6
theme_override_font_sizes/font_size = 14
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="PreviousButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -32.0
offset_right = 52.0
offset_bottom = 3.8147e-05
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("5_t0whs")
texture_pressed = ExtResource("7_652oi")
texture_hover = ExtResource("8_cemj6")

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -32.0
offset_right = -52.9998
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("5_t0whs")
texture_pressed = ExtResource("7_652oi")
texture_hover = ExtResource("8_cemj6")
flip_h = true

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 140.0
offset_right = 70.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 6
text = "Return"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5
scale = Vector2(1.01, 1.01)
transform = Transform2D(1.01, 0, 0, 1.01, 0, 0)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_6gm6i")
offset_left = -1.0
offset_right = 319.0
offset_bottom = 179.0
mouse_filter = 2

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_s2l0i")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5dyel")
}
